<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginEnd="@dimen/margin_16"
    android:background="@drawable/bg_alert_dialog"
    android:fitsSystemWindows="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/margin_12">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_weight="1"
        android:background="@color/color_transparent"
        android:ellipsize="end"
        android:maxLines="2"
        android:singleLine="false"
        android:textColor="@color/color_text"
        android:textSize="@dimen/text_size_large"
        android:text="@string/information" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_weight="1"
        android:background="@color/color_transparent"
        android:ellipsize="end"
        android:maxLines="32"
        android:singleLine="false"
        android:textColor="@color/color_text"
        android:textSize="@dimen/text_size_default"
        tools:text="@string/lorem_ipsum_size_12" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_36"
        android:background="@color/color_transparent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNegative"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_weight="1"
            android:background="@drawable/bg_button_red"
            android:singleLine="true"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_default" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPositive"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_weight="1"
            android:background="@drawable/bg_button_blue"
            android:singleLine="true"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_default" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>