<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    app:elevation="0dp"
    tools:parentTag="FrameLayout">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/color_background"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorViewTitle"
                style="@style/TextStyle.20sp.Bold.0C53B2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_18"
                android:layout_marginTop="@dimen/margin_18"
                android:layout_marginEnd="@dimen/margin_18"
                android:gravity="center"
                android:maxLines="4"
                android:singleLine="false"
                android:text="@string/error"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_large" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivErrorIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_64"
                android:src="@drawable/ic_error_red" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_64"
                android:gravity="center"
                android:singleLine="false"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_default"
                tools:text="@string/lorem_ipsum_size_20" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnErrorActionOne"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_64"
                android:layout_marginBottom="@dimen/margin_18"
                android:background="@drawable/bg_button_red"
                android:singleLine="true"
                android:text="@string/try_again"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnErrorActionTwo"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_18"
                android:layout_marginBottom="@dimen/margin_18"
                android:background="@drawable/bg_button_red"
                android:singleLine="true"
                android:text="@string/reload"
                android:visibility="gone"
                tools:visibility="visible" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</merge>