<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    app:elevation="0dp"
    tools:parentTag="FrameLayout">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_background"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.24sp.Bold.0C53B2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@color/color_background"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/error_empty_state_tile"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesctiption"
            style="@style/TextStyle.24sp.Bold.0C53B2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@color/color_background"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/error_empty_state_description"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_medium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEmptyStateViewReload"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/bg_button_red"
            android:paddingStart="@dimen/margin_16"
            android:paddingEnd="@dimen/margin_16"
            android:singleLine="true"
            android:text="@string/reload"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</merge>